--- a/thesis/EE-dyplom.bib
+++ b/thesis/EE-dyplom.bib
@@ -60,6 +60,13 @@
     note      = {\href{https://www.ics.uci.edu/~fielding/pubs/dissertation/top.htm}{<https://www.ics.uci.edu/~fielding/pubs/dissertation/top.htm>}, dostęp uzyskano 2025-07-20},
 }
 
+@book{brown2014make,
+  title={Make it stick: The science of successful learning},
+  author={Brown, Peter C and Roediger III, Henry L and McDaniel, Mark A},
+  year={2014},
+  publisher={Harvard University Press}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Dokumenty techniczne i manuale (Dokumentacja Frameworków)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -119,4 +126,30 @@
     type         = {RFC},
     number       = {7519},
     note         = {\href{https://www.rfc-editor.org/info/rfc7519}{<https://www.rfc-editor.org/info/rfc7519>}, dostęp uzyskano 2025-07-20},
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Artykuły naukowe
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@article{roediger2006test,
+  title={Test-enhanced learning: Taking memory tests improves long-term retention},
+  author={Roediger III, Henry L and Karpicke, Jeffrey D},
+  journal={Psychological science},
+  volume={17},
+  number={3},
+  pages={249--255},
+  year={2006},
+  publisher={SAGE Publications}
+}
+
+@article{kornell2008optimizing,
+  title={Optimising self-regulated study: The benefits--and costs--of dropping flashcards},
+  author={Kornell, Nate and Bjork, Robert A},
+  journal={Memory},
+  volume={16},
+  number={2},
+  pages={125--136},
+  year={2008},
+  publisher={Taylor \& Francis}
 }
