--- a/thesis/EE-dyplom.tex
+++ b/thesis/EE-dyplom.tex
@@ -191,7 +191,7 @@ An abstract is not the same as an introduction. The abstract provides informatio
     \pagenumbering{arabic}
     \setcounter{page}{1}
     \pagestyle{empty}
-    % \input{tekst/wstep}
+    \input{tekst/wstep}
     \input{tekst/projekt_systemu}
     \input{tekst/implementacja_systemu}
 
