wstep dalsza czesc

--- a/thesis/EE-dyplom.tex
+++ b/thesis/EE-dyplom.tex
@@ -24,7 +24,8 @@
 %	]
 \usepackage{placeins}
 \usepackage{dirtree}
-
+\usepackage{tabularx}
+\usepackage{booktabs}
 \usepackage{listings}
 \usepackage{xcolor}
 \definecolor{ac-red}{rgb}{0.8,0,0}       % Keywords (like 'def', 'return')
