--- a/thesis/tekst/projekt_systemu.tex
+++ b/thesis/tekst/projekt_systemu.tex
@@ -4,7 +4,7 @@
 Przed rozpoczęciem implementacji systemu, kluczowym etapem było zdefiniowanie jego projektu. 
 Faza ta obejmowała określenie zbioru wymagań zarówno funkcjonalnych, jak i niefunkcjonalnych na 
 podstawie wcześniej przeprowadzonej analizy porównawczej. Zdefiniowane wymagania były fundamentem 
-projektu architektury ułatwiającej późniejszą pracę nad implementacją aplikacji.
+projektu architektury ułatwiającym późniejszą pracę nad implementacją aplikacji.
 
 \section{Wymagania funkcjonalne}
 
